--- a/default.html
+++ b/default.html
@@ -2,6 +2,6 @@
   <head>
     <title>Пример</title>
   </head> 
-  <body> <font color = "green"> <h1> Hello World! </h1></font>
+  <body> <font color = "green"> <h1> Hello World! hello devops </h1></font>
   </body> 
 </html>
