--- a/default.html
+++ b/default.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>Пример</title>
+    <title>Example</title>
   </head> 
-  <body> <font color = "green"> <h1> Hello World! hello devops </h1></font>
+  <body> <font color = "red"> <h1> Hello World! hello devops </h1></font>
   </body> 
 </html>
